View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0029717 | Community | OCCT:Shape Healing | public | 2018-04-23 17:03 | 2019-09-07 16:27 |
Reporter | drazmyslovich | Assigned To | bugmaster | ||
Priority | normal | Severity | minor | ||
Status | closed | Resolution | fixed | ||
Platform | Windows | OS | VC++ 2010 | ||
Product Version | 7.1.0 | ||||
Target Version | 7.4.0 | Fixed in Version | 7.4.0 | ||
Summary | 0029717: Shape Healing - ShapeFix_Face::FixSmallAreaWire delivers a face with wrong-oriented wires + 1 small crash-fix | ||||
Description | If the provided face is reversed, then the algorithm starts with the empty-copied, but reversed face - this results in adding of forward-oriented wires to reverse-oriented face... Another problem lies in ShapeFix_Face::FixOrientation function - it can cause a crash/exception if one of the curves has no 2D curve | ||||
Steps To Reproduce | Since the usage code is a part of my application, I can't provide any steps to reproduce. Still, the fixed issues are easily observable from the code. | ||||
Tags | No tags attached. | ||||
Test case number | bugs heal bug25923 | ||||
|
Branch CR29717 has been created by drazmyslovich. SHA-1: d4f63f269e4fc0c68d3684916471f2d3afb288f9 Detailed log of new commits: Author: drazmyslovich Date: Mon Apr 23 16:38:32 2018 +0200 0029717: Fix FixSmallAreaWire for the reversed faces. Add nullptr check for FixOrientation. |
|
Dear gka. The branch is ready for review. Thank you. |
|
Branch CR29717_1 has been created by abv. SHA-1: 057c17251939a9208bb828cd0fd281329e7d5dcb Detailed log of new commits: Author: drazmyslovich Date: Mon Apr 23 16:38:32 2018 +0200 0029717: Fix FixSmallAreaWire for the reversed faces. Add nullptr check for FixOrientation. |
|
Branch CR29717_1 has been updated by abv. SHA-1: 32222f1385bbaed5b1ce3d8a9fd22e2d006bc436 Detailed log of new commits: Author: abv Date: Thu Sep 5 04:32:08 2019 +0300 Test bugs heal bug25923 is corrected to avoid relying on wrong orientation of face after fixing small wire |
|
Reviewed, please integrate. Test results are in Jenkins job CR29717-abv. Note that test bugs heal bug25923 was reported as Failed because it relied on wrong behavior (creation of incorrectly oriented wire) to check that the fix has been actually done; this test is corrected. |
|
Combination - OCCT branch : WEEK-36 master SHA - 39ac47df8cd6df3a58e95e460a580a0bbcf04e26 5f5b1aed1c6e139bbd34314eca77ae7abcd8895c Products branch : WEEK-36 SHA - d0069f6ae5aec77b9487ab84664fb1572c4e95fe was compiled on Linux, MacOS and Windows platforms and tested in optimize mode. Number of compiler warnings: No new/fixed warnings Regressions/Differences/Improvements: No regressions/differences CPU differences: Debian80-64: OCCT Total CPU difference: 16175.440000000028 / 16167.270000000033 [+0.05%] Products Total CPU difference: 10467.530000000015 / 10475.630000000048 [-0.08%] Windows-64-VC14: OCCT Total CPU difference: 18251.171875 / 18256.515625 [-0.03%] Products Total CPU difference: 10129.234375 / 12158.609375 [-16.69%] Image differences : No differences that require special attention Memory differences : No differences that require special attention |
|
Branch CR29717_1 has been deleted by inv. SHA-1: 32222f1385bbaed5b1ce3d8a9fd22e2d006bc436 |
|
Branch CR29717 has been deleted by inv. SHA-1: d4f63f269e4fc0c68d3684916471f2d3afb288f9 |
occt: master 3f50e94e 2018-04-23 14:38:32 Committer: bugmaster Details Diff |
0029717: Shape Healing - ShapeFix_Face::FixSmallAreaWire delivers a face with wrong-oriented wires + 1 small crash-fix - Fix FixSmallAreaWire for the reversed faces. - Add nullptr check for FixOrient... - Test bugs heal bug25923 is corrected to avoid relying on wrong orientation of face after fixing small wire |
Affected Issues 0029717 |
|
mod - src/ShapeFix/ShapeFix_Face.cxx | Diff File | ||
mod - tests/bugs/heal/bug25923 | Diff File |
Date Modified | Username | Field | Change |
---|---|---|---|
2018-04-23 17:03 | drazmyslovich | New Issue | |
2018-04-23 17:03 | drazmyslovich | Assigned To | => gka |
2018-04-23 17:38 | git | Note Added: 0075614 | |
2018-04-23 17:39 | drazmyslovich | Note Added: 0075615 | |
2018-04-23 17:39 | drazmyslovich | Status | new => resolved |
2018-04-23 17:40 | kgv | Summary | ShapeFix_Face::FixSmallAreaWire delivers a face with wrong-oriented wires + 1 small crash-fix => Shape Healing - ShapeFix_Face::FixSmallAreaWire delivers a face with wrong-oriented wires + 1 small crash-fix |
2019-09-04 22:10 | git | Note Added: 0086756 | |
2019-09-05 04:35 | git | Note Added: 0086761 | |
2019-09-05 04:37 | abv | Test case number | => bugs heal bug25923 |
2019-09-05 04:41 | abv | Note Added: 0086762 | |
2019-09-05 04:41 | abv | Assigned To | gka => bugmaster |
2019-09-05 04:41 | abv | Status | resolved => reviewed |
2019-09-06 16:57 | bugmaster | Note Added: 0086899 | |
2019-09-06 16:57 | bugmaster | Status | reviewed => tested |
2019-09-07 11:38 | bugmaster | Changeset attached | => occt master 3f50e94e |
2019-09-07 11:38 | bugmaster | Status | tested => verified |
2019-09-07 11:38 | bugmaster | Resolution | open => fixed |
2019-09-07 16:26 | git | Note Added: 0086933 | |
2019-09-07 16:27 | git | Note Added: 0086958 |